# slam-uwb-calibration

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/distance/: eee_01_distance.csv  eee_02_distance.csv  eee_03_distance.csv  nya_01_distance.csv  nya_02_distance.csv  nya_03_distance.csv  rtp_01_distance.csv  rtp_02_distance.csv  rtp_03_distance.csv  sbs_01_distance.csv  sbs_02_distance.csv  sbs_03_distance.csv  spms_01_distance.csv  spms_02_distance.csv  spms_03_distance.csv  tnp_01_distance.csv  tnp_02_distance.csv  tnp_03_distance.csv
data/distance_filtered/: eee_01_distance_filtered.csv  eee_02_distance_filtered.csv  eee_03_distance_filtered.csv  nya_01_distance_filtered.csv  nya_02_distance_filtered.csv  nya_03_distance_filtered.csv  rtp_01_distance_filtered.csv  rtp_02_distance_filtered.csv  rtp_03_distance_filtered.csv  sbs_01_distance_filtered.csv  sbs_02_distance_filtered.csv  sbs_03_distance_filtered.csv  spms_01_distance_filtered.csv  spms_02_distance_filtered.csv  spms_03_distance_filtered.csv  tnp_01_distance_filtered.csv  tnp_02_distance_filtered.csv  tnp_03_distance_filtered.csv
data/odomInU/: eee_02_odomInU.csv  eee_03_odomInU.csv  nya_02_odomInU.csv  nya_03_odomInU.csv  rtp_02_odomInU.csv  rtp_03_odomInU.csv  sbs_02_odomInU.csv  sbs_03_odomInU.csv  spms_02_odomInU.csv  spms_03_odomInU.csv  tnp_02_odomInU.csv  tnp_03_odomInU.csv
data/opt_odom/: eee_01_opt_odom.csv  eee_02_opt_odom.csv  eee_03_opt_odom.csv  nya_01_opt_odom.csv  nya_02_opt_odom.csv  nya_03_opt_odom.csv  rtp_01_opt_odom.csv  rtp_02_opt_odom.csv  rtp_03_opt_odom.csv  sbs_01_opt_odom.csv  sbs_02_opt_odom.csv  sbs_03_opt_odom.csv  spms_01_opt_odom.csv  spms_02_opt_odom.csv  spms_03_opt_odom.csv  tnp_01_opt_odom.csv  tnp_02_opt_odom.csv  tnp_03_opt_odom.csv
include/: csv_utils.hpp  estimator_types.hpp  utility.h  uwb_csv_loader.hpp
include/factor/: AnchorDistanceFactor.hpp  ExtraFactors.hpp  RelOdomFactor.h  UwbFactor.hpp  UwbPoseRangeFactor.h
launch/: run_ntuviral_estimator.launch  run_ntuviral_localizer.launch
param/: anchor_estimator_params.yaml
src/: anchor_estimator.cpp  anchor_localizer.cpp
